force-app/main/default/objects/Order/fields/Parcel_Depth__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Depth__c</fullName>
    <label>Parcel Depth</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>