force-app/main/default/objects/Order/fields/Parcel_Height__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Height__c</fullName>
    <description>Field stores the height of box (parcel).</description>
    <label>Parcel Height</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>