force-app/main/default/objects/Order/fields/Parcel_Width__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Width__c</fullName>
    <description>Field stores the width of box (parcel).</description>
    <label>Parcel Width</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>